# Automated-Drone-Distribution-Network

./: .gitignore  createInleverdocs.sh
Astah/: Astah.asta  Ontwerpen.asta
Code/NRF24_testing/Arduino/: arudino_talker.ino  payload.h
Code/NRF24_testing/Arduino/datareciever/: datareciever.ino
Code/NRF24_testing/Arduino/datasender/: Message.cpp  Message.hpp  datasender.ino
Code/NRF24_testing/RF24/: Makefile.inc  librf24.so.1.3.2
Code/NRF24_testing/RF24/examples_linux/: ReadMessages.cpp  SendMessages  SendMessages.cpp  SendToTwo  SendToTwo.cpp  gettingstarted  gettingstarted.cpp  gettingstarted_call_response  gettingstarted_call_response.cpp  pingpair_dyn  transfer  transfer.cpp
Code/NRF24_testing/RF24/html/: ATTiny.html  ATXMEGA.html  Arduino.html  CONTRIBUTING_8md.html  CONTRIBUTING_8md_source.html  CrossCompile.html  GettingStarted_8ino-example.html  GettingStarted_CallResponse_8ino-example.html  GettingStarted_HandlingData_8ino-example.html  GettingStarted_HandlingFailures_8ino-example.html  Linux.html  MRAA.html  Makefile.html  Makefile_8inc.html  Makefile_8inc_source.html  Makefile_source.html  (+70 more)
Code/Parser/: main.cpp  message.cpp  message.hpp
Code/ros/src/: Readme.md
Code/ros/src/drone_meshnetwork_simulation/: .clang-format  CMakeLists.txt
Code/ros/src/drone_meshnetwork_simulation/doxygen/: Doxyfile
Code/ros/src/drone_meshnetwork_simulation/launch/: empty_world.launch  factory.launch
Code/ros/src/drone_meshnetwork_simulation/msg/: Location.msg  NRF24.msg
Code/ros/src/drone_meshnetwork_simulation/src/Communication/Internet/: IInternetConnection.hpp
Code/ros/src/drone_meshnetwork_simulation/src/Communication/Meshnetwork/: IMeshDebugInfo.hpp  MeshnetworkComponent.cpp  MeshnetworkComponent.hpp  MeshnetworkGateway.cpp  MeshnetworkGateway.hpp  MeshnetworkRouter.cpp  MeshnetworkRouter.hpp
Code/ros/src/drone_meshnetwork_simulation/src/Communication/Meshnetwork/tests/: utestMeshRouter.cpp
Code/ros/src/drone_meshnetwork_simulation/src/Communication/Messages/: Message.cpp
Code/ros/src/drone_meshnetwork_simulation/src/Communication/Messages/Tests/: utestMessage.cpp
Code/ros/src/drone_meshnetwork_simulation/src/Communication/RoutingTechnique/: HybridLMRoutingProtocol.cpp  HybridLMRoutingProtocol.hpp  IRoutingEssentials.hpp  IRoutingTechnique.hpp
Code/ros/src/drone_meshnetwork_simulation/src/Communication/RoutingTechnique/tests/: utestChildTableTree.cpp  utestHybridLMRoutingProtocol.cpp
Code/ros/src/drone_meshnetwork_simulation/src/Communication/Wireless/: IMeshNetwork.hpp  IWirelessCommunication.hpp
Code/ros/src/drone_meshnetwork_simulation/src/Drone/: IDroneEngine.hpp  MockDroneEngine.cpp  MockDroneEngine.hpp
Code/ros/src/drone_meshnetwork_simulation/src/NRF24/: MessageTester  MockNetworkComponent.cpp  MockNetworkComponent.hpp  NRF24HighLevelInterface.cpp  NRF24HighLevelInterface.hpp  NRF24LowLevelInterface.cpp  NRF24LowLevelInterface.hpp  main.cpp
Code/ros/src/drone_meshnetwork_simulation/src/Pistache/InternetGateway/: InternetGateway.cpp  InternetGateway.hpp
Code/ros/src/drone_meshnetwork_simulation/src/RESTGateway/InternetGateway/: InternetGateway.hpp
Code/ros/src/drone_meshnetwork_simulation/src/Raspberry/: CMakeLists.txt  RaspberryGateway.cpp  RaspberryRouter.cpp
Code/ros/src/drone_meshnetwork_simulation/src/Vector/: TestVector3.cpp  Vector3.hpp  Vector3.inc
Code/ros/src/drone_meshnetwork_simulation/src/gazebo/: DroneFactory.cpp  DroneFactory.hpp
Code/ros/src/drone_meshnetwork_simulation/src/gazebo/Arduino/: IVirtualArduino.hpp  VirtualArduinoGateway.cpp  VirtualArduinoGateway.hpp
Code/ros/src/drone_meshnetwork_simulation/src/gazebo/DroneSimulation/: DroneEngine.cpp  DroneEngine.hpp  VirtualDrone.cpp  VirtualDrone.hpp
Code/ros/src/drone_meshnetwork_simulation/src/gazebo/RaspberryPi/: IVirtualRaspberryPi.hpp  VirtualRaspberryPiGateway.cpp  VirtualRaspberryPiGateway.hpp  VirtualRaspberryPiGatewayWithServer.cpp  VirtualRaspberryPiGatewayWithServer.hpp  VirtualRaspberryPiRouter.cpp  VirtualRaspberryPiRouter.hpp
Code/ros/src/drone_meshnetwork_simulation/src/ros/: RosDroneEngineConnector.cpp  RosDroneEngineConnector.hpp  RosInternetMock.cpp  RosInternetMock.hpp
Code/ros/src/drone_meshnetwork_simulation/src/ros/DroneManagerService/: DroneManager.cpp  DroneManager.hpp  DroneManagerService.cpp
Code/ros/src/drone_meshnetwork_simulation/src/ros/WirelessSimulation/: Node.cpp  Node.hpp  VirtualNRF24.cpp  VirtualNRF24.hpp  WirelessSignalSimulator.cpp  WirelessSignalSimulator.hpp  WirelessSignalSimulatorService.cpp
Code/ros/src/drone_meshnetwork_simulation/srv/: AreaScan.srv  CasusRequest.srv  WirelessMessage.srv
Code/ros/src/drone_meshnetwork_simulation/world/: empty_world.world  factory.world
Docs/Afstudeerverslag/: .~lock.afstudeerpresentatie.odp#
Docs/Afstudeerverslag/Afstudeerverslag/: Afstudeerverslag.tex  bilbliography.bib
Docs/DesignDocumenten/: SoftwareDesignDocument.tex  SoftwareRequirementSpecification.tex  bilbliography.bib
Docs/DesignDocumenten/Afbeeldingen/: CommunicationComponentDiagram.png.bak  Component Diagram.png.bak  ComponentDiagram.png.bak  NRF24ComponentDiagram.png.bak  PackageDiagram.png.bak  RESTgatewayComponentDiagram.png.bak  gazeboComponentDiagram.png.bak  rosComponentDiagram.png.bak
Docs/DesignDocumenten/UML/: CheckConnection.uml  DomeinModel.uml  EmergencyProtocol.uml  LostConnection.uml  MeshCommunicator.uml  processMessage.uml  requestLocation.uml  sendGoalToDrone.uml
Docs/Onderzoeken/DroneMeshnetwerkSimulatie/: Onderzoeksrapport Drone mesh netwerk simulatie.bcf  Onderzoeksrapport Drone mesh netwerk simulatie.run.xml  Onderzoeksrapport Drone mesh netwerk simulatie.tex  Onderzoeksrapport Drone meshnetwerk simulatie.tex  Onderzoeksrapport drone meshnetwerksimulatie.tex  bilbliography.bib
Docs/Plan van aanpak/: Plan van aanpak.tex  appendix.tex  bilbliography.bib  main.tex
Docs/SDD/: SoftwareDesignDocument.tex  bilbliography.bib
Docs/SRS/: SoftwareRequirementSpecification.tex  bilbliography.bib
Scriptie_Maurice_Berentsen_561399_Drone_Meshnetwerk_Alten/Code/abstract_drone/: CMakeLists.txt
(+313 files in other folders)
